--- a/src/main/resources/com/example/jsfdemo/messages_en.properties
+++ b/src/main/resources/com/example/jsfdemo/messages_en.properties
@@ -1,11 +1,35 @@
 mainWindowTitle=JSF demo application
-action=Action
-actionDelete=Delete
-mainHeading=Manage some person's data
+mainHeading=Manage person's data
 
 linkHome=Main page
 
 applicationInfo=This is a demo application showing basic capabilities of JSF 2.0, CDI and other Java EE Web Profile technologies
+personNameLabel=Name
+personYobLabel=Year of birth
+personFormOKButton=Submit
+personAddLabel=Add new person
+personShowAll=Show all persons
+personAllLabel=All persons
+personEditLabel=Edit
+personRemoveLabel=Remove
+
+linkHome=Main page
+personIdLabel=Id
+personNameLabel2=Name (required)
+personYobLabel2=Year of birth (1990-2011)
+personFormOKButton=Submit
+
+accept=akceptuj\u0119 regulamin
+
+
+
+
+
+
+
+action=Action
+actionDelete=Delete
+
 
 personFirstNameLabel=First name
 personDobLabel=Date of birth
@@ -19,4 +43,3 @@ personFormOKButton=Submit
 personAddLabel=Add new person
 personShowAll=Show all persons
 personAllLabel=All persons
-
