--- a/src/main/resources/com/example/jsfdemo/messages_pl.properties
+++ b/src/main/resources/com/example/jsfdemo/messages_pl.properties
@@ -1,11 +1,31 @@
 mainWindowTitle=Aplikacja JSF - demo
+mainHeading=Zarz\u0105dzanie danymi os\u00f3b
+
+linkHome=Strona g\u0142\u00f3wna
+
+applicationInfo=To jest aplikacja demo pokazuj\u0105ca podstawowe mo\u017cliwo\u015bci i w\u0142asno\u015bci technologii JSF 2.0,  CDI, EJB 3.1 i innych Java EE 6 Web Profile
+personNameLabel=Imi\u0119
+personYobLabel=Rok urodzenia
+personFormOKButton=Zatwierd\u017a
+personAddLabel=Dodaj now\u0105 osob\u0119
+personShowAll=Poka\u017c wszystkie osoby
+personAllLabel=Wszystkie osoby
+personEditLabel=Edytuj
+personRemoveLabel=Usu\u0144
+
+linkHome=Strona g\u0142\u00f3wna
+personIdLabel=Id
+personNameLabel2=Imi\u0119 (required)
+personYobLabel2=Rok urodzenia (1990-2011)
+personFormOKButton=Zatwierd\u017a
+
+accept=akceptuj\u0119 regulamin
+
+
+
+
 action=Akcja
 actionDelete=Usu\u0144
-mainHeading=Zarz\u0105dzanie danymi os\u00F3b
-
-linkHome=Strona g\u0142\u00F3wna
-
-applicationInfo=To jest aplikacja demo pokazuj\u0105ca podstawowe mo\u017Cliwo\u015Bci i w\u0142asno\u015Bci technologii JSF 2.0,  CDI, EJB 3.1 i innych Java EE 6 Web Profile
 
 personFirstNameLabel=Imi\u0119
 personDobLabel=Data urodzenia
